--- a/encyclopedia/templates/encyclopedia/newPage.html
+++ b/encyclopedia/templates/encyclopedia/newPage.html
@@ -6,7 +6,13 @@
 
 {% block body %} 
     <h1> New Content</h1>
-    <!--<form method ="POST">
+    <form method ="POST"  action= "{%url 'newPage'%}"  > 
+        {% csrf_token %} 
+        {{ form.as_p }}
+        <input type="submit" value="submit">
+    </form>
+    <!--
+    <form method ="POST">
         <div id="titleNew">
             <label for="titulo"> Title: </label>
             <textarea name="titulo" style="width:500px; height:24px;"> 
@@ -20,7 +26,6 @@
             <input type="submit" value="submit">
         </div>
     </form>
-
     {% if exist %}
         <div id="existe">
             <h1> Ya existe </h1>
