Iniciando con la página edit pero no tiene funcionalidad unu

--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,7 +1,14 @@
+{% extends "encyclopedia/layout.html" %}
 {% block title %}
-    Edit {{title_edit}}
+    {{title}}
 {% endblock title %}
 
 {% block body %}
-    Editando xd
+    <h1>Edit {{title}}</h1>
+    <hr/>
+    <form method="POST" > <!--"/wiki/{{entryTtle}}/edit-->
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="submit">
+    </form>
 {% endblock body %}
