--- a/encyclopedia/templates/encyclopedia/entryCont.html
+++ b/encyclopedia/templates/encyclopedia/entryCont.html
@@ -8,4 +8,8 @@
     
     <!--IMPORTANTE TENER EL SAFE-->
     {{content| safe}} 
+    <div class="editar"> 
+        <a href="/wiki/{{entryTtle}}/edit">Edit</a>
+    </div>
+
 {% endblock %}
