--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -6,9 +6,11 @@
 {% block body %}
     <h1>Edit {{title}}</h1>
     <hr/>
-    <form method="POST" > <!--"/wiki/{{entryTtle}}/edit-->
+     
+    <form action="{%url 'edit' title%}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        {{form.as_p}}
         <input type="submit" value="submit">
     </form>
 {% endblock body %}
